syntax = "proto3";

package product;

option go_package = "./;product";

import "google/protobuf/timestamp.proto";

// Product message
message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string image = 5;
  Inventory inventory = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Inventory message
message Inventory {
  uint32 product_id = 1;
  uint32 quantity = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// Create Product
message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  string image = 4;
}

message CreateProductResponse {
  Product product = 1;
  string message = 2;
}

// Get Product
message GetProductRequest {
  uint32 id = 1;
}

message GetProductResponse {
  Product product = 1;
  string message = 2;
}

// Update Product
message UpdateProductRequest {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string image = 5;
}

message UpdateProductResponse {
  Product product = 1;
  string message = 2;
}

// Delete Product
message DeleteProductRequest {
  uint32 id = 1;
}

message DeleteProductResponse {
  string message = 2;
}

// Decrease Inventory
message DecreaseInventoryRequest {
  uint32 product_id = 1;
  uint32 quantity = 2;
}
message DecreaseInventoryResponse {
  string message = 1;
}

// Increase Inventory
message IncreaseInventoryRequest {
  uint32 product_id = 1;
  uint32 quantity = 2;
}
message IncreaseInventoryResponse {
  string message = 1;
}

// Service
service ProductService {
  // Product CRUD
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc DecreaseInventory(DecreaseInventoryRequest) returns (DecreaseInventoryResponse);
  rpc IncreaseInventory(IncreaseInventoryRequest) returns (IncreaseInventoryResponse);
} 